--- a/main.html
+++ b/main.html
@@ -15,8 +15,6 @@
 </script>
 
 </body>
-	<div id="text">
-  <p>Welcome to the word of  Web development</p>
-</div>
+	<div id="text">Welcome to the word of  Web development</div>
 
 </html>
